# GameLife

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Life.cpp  Life.h  README.md  life_console.cpp  tests.cpp
lib/: DataStorage.h  Utils.h
storage/: raw.data
